--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "url": "postgres://dulsemmt:ShITuqlWJKlm_va6tKRybe5jpjVqavhb@rogue.db.elephantsql.com:5432/dulsemmt",
+    "dialect": "postgres",
+    "operatorsAliases": "0"
   },
   "test": {
     "username": "root",
